--- a/package.json
+++ b/package.json
@@ -8,12 +8,15 @@
     "eject": "expo eject"
   },
   "dependencies": {
+    "@react-native-community/datetimepicker": "^3.0.3",
     "expo": "~39.0.2",
     "expo-status-bar": "~1.0.2",
     "react": "16.13.1",
     "react-dom": "16.13.1",
     "react-native": "https://github.com/expo/react-native/archive/sdk-39.0.2.tar.gz",
-    "react-native-web": "~0.13.12"
+    "react-native-modal-datetime-picker": "^9.0.0",
+    "react-native-web": "~0.13.12",
+    "shortid": "^2.2.15"
   },
   "devDependencies": {
     "@babel/core": "~7.9.0"
